--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 bin/
 gen/
 
+build
+
 # Local configuration file (sdk path, etc)
 local.properties
 
@@ -27,3 +29,7 @@ proguard/
 *.ipr
 *.iws
 .idea/
+
+misc
+
+.DS_Store
