--- a/plasma/src/main/AndroidManifest.xml
+++ b/plasma/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
             android:name=".PlasmaService"
             android:enabled="true"
             android:label="@string/wallpaper_label"
-            android:icon="@drawable/ic_launcher"
             android:permission="android.permission.BIND_WALLPAPER" >
             <intent-filter>
                 <action android:name="android.service.wallpaper.WallpaperService" >
@@ -30,7 +29,6 @@
         <activity
             android:name=".PlasmaActivity"
             android:label="@string/app_name"
-            android:icon="@drawable/ic_launcher"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,6 +38,7 @@
         </activity>
         <activity
             android:name="org.quuux.plasma.SettingsActivity"
+            android:exported="true"
             android:label="@string/title_activity_settings" >
         </activity>
     </application>
