--- a/plasma/src/main/AndroidManifest.xml
+++ b/plasma/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.quuux.plasma"
-    android:versionCode="2"
-    android:versionName="1.0.1" >
+    package="org.quuux.plasma">
 
     <application
         android:icon="@drawable/ic_launcher"
