--- a/plasma/build.gradle
+++ b/plasma/build.gradle
@@ -7,6 +7,13 @@ def getVersionCode = { ->
     return code
 }
 
+def getVersionName = { ->
+
+    def name = project.hasProperty('versionName') ? versionName : ""
+    println "VersionName is set to $name"
+    return name
+}
+
 android {
     compileSdkVersion 19
     buildToolsVersion "19.0.1"
@@ -15,8 +22,8 @@ android {
         minSdkVersion 8
         targetSdkVersion 19
 
-        versionCode hasProperty('versionCode') ? $versionCode : 0
-        versionName hasProperty('versionName') ? "$versionName" : "0"
+        versionCode getVersionCode()
+        versionName getVersionName()
 
         ndk {
             moduleName "plasma"
