--- a/plasma/src/main/AndroidManifest.xml
+++ b/plasma/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application
         android:icon="@drawable/ic_launcher"
+        android:debuggable="true"
         android:label="@string/app_name" >
 
         <service
@@ -34,9 +35,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.quuux.plasma.SettingsActivity"
+            android:name=".Settings"
             android:exported="true"
-            android:label="@string/title_activity_settings" >
+            android:label="@string/title_activity_settings"
+            >
         </activity>
     </application>
 
