--- a/plasma/src/main/AndroidManifest.xml
+++ b/plasma/src/main/AndroidManifest.xml
@@ -51,7 +51,26 @@
 
             <meta-data
                 android:name="android.service.wallpaper"
-                android:resource="@xml/spae_wallpaper" >
+                android:resource="@xml/space_wallpaper" >
+            </meta-data>
+        </service>
+
+
+
+
+        <service
+            android:name=".MetaBallsWallpaper"
+            android:enabled="true"
+            android:label="@string/metaballs_wallpaper_label"
+            android:permission="android.permission.BIND_WALLPAPER" >
+            <intent-filter>
+                <action android:name="android.service.wallpaper.WallpaperService" >
+                </action>
+            </intent-filter>
+
+            <meta-data
+                android:name="android.service.wallpaper"
+                android:resource="@xml/metaballs_wallpaper" >
             </meta-data>
         </service>
 
