touch - bunch of work - messing around with opengl2

--- a/plasma/build.gradle
+++ b/plasma/build.gradle
@@ -35,6 +35,12 @@ android {
         }
     }
 
+    sourceSets {
+        main {
+            assets.srcDirs = ['src/main/res/assets']
+        }
+    }
+
     buildTypes.debug.jniDebugBuild true
 
     signingConfigs {
