--- a/plasma/src/main/AndroidManifest.xml
+++ b/plasma/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.quuux.plasma">
 
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19"/>
+
+    <uses-feature
+        android:name="android.software.live_wallpaper"
+        android:required="true" />
+
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
@@ -93,11 +101,5 @@
         </activity>
     </application>
 
-    <uses-sdk android:minSdkVersion="8" />
-
-    <uses-feature
-        android:name="android.software.live_wallpaper"
-        android:required="true" >
-    </uses-feature>
 
 </manifest>
